# anony_repo

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  reproduce.sh
adversary/: byzantine.cpp  byzantine.h  grinding.cpp  grinding.h
core/: amd_tag.cpp  amd_tag.h  condshare.cpp  condshare.h  ess_backend.cpp  ess_backend.h  field.cpp  field.h  hash_to_field.cpp  hash_to_field.h  lagrange.cpp  lagrange.h  polyring.cpp  polyring.h
experiments/: exp10_extension_tradeoff.cpp  exp1_distjoin_scaling.cpp  exp2_softrefresh_scaling.cpp  exp3_admissibility.cpp  exp4_share_size.cpp  exp5_wan_latency.cpp  exp6_packet_loss.cpp  exp7_byzantine.cpp  exp8_grinding_dos.cpp  exp_common.h
figures/: SUMMARY.md
net/: channel.cpp  channel.h  inproc_bus.cpp  inproc_bus.h  metrics.cpp  metrics.h  msg.cpp  msg.h
protocol/: a2pe.cpp  a2pe.h  distjoin.cpp  distjoin.h  epoch_mgr.cpp  epoch_mgr.h  hardrefresh.cpp  hardrefresh.h  party.cpp  party.h  softrefresh.cpp  softrefresh.h
tests/: test_distjoin.cpp  test_epoch_mgr.cpp  test_ess.cpp  test_field.cpp  test_softrefresh.cpp
tools/plot_scripts/: analyze_all.py  plot_exp6_packet_loss.py  plot_exp8_grinding.py  plot_fig2_tradeoff.py  plot_fig4_scaling.py  plot_wan_amd.py
